# dl-example

./: CMakeLists.txt
base/: CMakeLists.txt  base.cpp
derived/: CMakeLists.txt  derived.cpp
drived/: CMakeLists.txt  drived.cpp
example/: CMakeLists.txt  main.cpp
example/include/: base_handler.h  dl_loader.h
include/: base.h  derived.h  drived.h
